--- a/Brewing/composer.json
+++ b/Brewing/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
+        "needim/noty": "^3.1",
         "realrashid/sweet-alert": "^5.1"
     },
     "require-dev": {
