--- a/Brewing/package.json
+++ b/Brewing/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "bounce.js": "^0.8.2",
+        "noty": "^3.2.0-beta-deprecated",
         "sweetalert2": "^11.4.8"
     }
 }
