--- a/Brewing/composer.json
+++ b/Brewing/composer.json
@@ -7,14 +7,17 @@
     "require": {
         "php": "^8.0.2",
         "bensampo/laravel-enum": "^6.2",
+        "bluemmb/faker-picsum-photos-provider": "2.0",
         "elasticsearch/elasticsearch": "^8.6",
         "guzzlehttp/guzzle": "^7.5",
+        "jzonta/faker-restaurant": "^2.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
         "needim/noty": "^3.1",
-        "realrashid/sweet-alert": "^5.1"
+        "realrashid/sweet-alert": "^5.1",
+        "xvladqt/faker-lorem-flickr": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
