--- a/Brewing/composer.json
+++ b/Brewing/composer.json
@@ -17,6 +17,8 @@
         "livewire/livewire": "^2.11",
         "needim/noty": "^3.1",
         "realrashid/sweet-alert": "^5.1",
+        "sopamo/laravel-filepond": "^1.2",
+        "tinymce/tinymce": "^6.3",
         "xvladqt/faker-lorem-flickr": "^1.0"
     },
     "require-dev": {
