--- a/Brewing/package.json
+++ b/Brewing/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "bounce.js": "^0.8.2",
+        "jquery-filepond": "^1.0.0",
         "noty": "^3.2.0-beta-deprecated",
         "sweetalert2": "^11.4.8"
     }
