--- a/Brewing/package.json
+++ b/Brewing/package.json
@@ -6,24 +6,20 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-react": "^2.2.0",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "autoprefixer": "^10.4.13",
         "axios": "^1.3.3",
         "bootstrap": "^5.2.3",
+        "jquery": "^3.6.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "sass": "^1.56.1",
+        "swiper": "^9.1.0",
         "tailwindcss": "^3.2.4",
         "vite": "^4.1.3"
     },
     "dependencies": {
-        "@vitejs/plugin-react-refresh": "^1.3.6",
-        "bounce.js": "^0.8.2",
-        "jquery-filepond": "^1.0.0",
-        "noty": "^3.2.0-beta-deprecated",
         "sweetalert2": "^11.4.8"
     }
 }
